--- a/apps/android/vanilla/app/src/main/res/values/themes.xml
+++ b/apps/android/vanilla/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Scoredroid" parent="android:Theme.Material.Light.NoActionBar" />
+    <!--    <style name="Theme.Scoredroid" parent="android:Theme.Material.Light.NoActionBar" />-->
+    <style name="Theme.Scoredroid" parent="Theme.Material3.DayNight.NoActionBar">
+
+    </style>
 </resources>
